# Qcord

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: main.cpp
src/core/: broadcast.cpp  broadcast.h  encoder.cpp  encoder.h  output.cpp  output.h  source.cpp  source.h
src/encoder/: ffmpeg_encoder.cpp  ffmpeg_encoder.h
src/filters/: filter.cpp
src/outputs/local/: file_output.cpp  file_output.h
src/outputs/telegram/: telegram_output.cpp  telegram_output.h
src/outputs/twitch/: twitch_output.cpp  twitch_output.h
src/outputs/youtube/: youtube_output.cpp  youtube_output.h
src/sources/: audio_input.cpp  audio_input.h  screen_capture.cpp  screen_capture.h  webcam_capture.cpp  webcam_capture.h
src/ui/: mainwindow.cpp  mainwindow.h  settingsdialog.cpp  settingsdialog.h
